# PY_EMBEDDED_TARGET_MANAGER

./: LICENSE  README.md  cli.py  embedded_target_manager.py  pyproject.toml
src/embedded_target_manager/: __init__.py  cli.py  config.py  discovery.py  exceptions.py  reporting.py  runner.py  ui.py
